Fix text alignment issue in steak.css

--- a/recipes/steak.css
+++ b/recipes/steak.css
@@ -74,4 +74,5 @@ h2 {
 /* Change text color to white */
 body, p, li {
   color: rgb(255, 255, 255);
+  text-align: center;
 }
